Fix CORS policy, user credential persistence, and database order storage